# BlueROV-Heavy-Autonomous-Navigation

./: README.md  repos.yaml  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autonomous_rov/lib/autonomous_rov/: listenerMIR  video
install/autonomous_rov/share/autonomous_rov/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kobuki_ros_interfaces/share/kobuki_ros_interfaces/: local_setup.sh  package.sh
install/opencv_tools/lib/opencv_tools/: aruco_marker_pose_estimator_tf  robot_goal_pos_extimation
install/opencv_tools/share/opencv_tools/: package.sh
install/rov_practical/lib/rov_practical/: dddqn  tf  uw
install/rov_practical/share/rov_practical/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/webcam_publisher/lib/webcam_publisher/: webcam_publisher_node.py
install/webcam_publisher/share/webcam_publisher/: local_setup.sh  package.sh  (+5 more)
log/: latest_build
src/autonomous_rov/: package.xml  setup.cfg  setup.py
src/autonomous_rov/autonomous_rov/: listenerMIR.py  listenerMIR.py~
src/autonomous_rov/launch/: readme_gcs_bridge.txt~  run_all.launch  run_autonomous_rov.launch.py  run_mavros_only.launch  run_teleop.launch  video.launch.py
src/opencv_tools/: setup.py
src/opencv_tools/opencv_tools/: aruco_marker_pose_estimation_tf.py  calibration.yml  calibration_chessboard_copy.yaml  robot_goal_pos_extimation.py
src/rov_practical/: package.xml  setup.cfg  setup.py
src/rov_practical/rov_practical/: gazebo_world.py  unw.py
src/webcam_publisher/: CMakeLists.txt
(+11 files in other folders)
